@@ -464,7 +464,7 @@ ns_findfonts (Lisp_Object font_spec, BOOL isMatch)
     /* If has non-unicode registry, give up. */
     tem = AREF (font_spec, FONT_REGISTRY_INDEX);
     if (! NILP (tem) && !EQ (tem, Qiso10646_1) && !EQ (tem, Qunicode_bmp))
-	return isMatch ? ns_fallback_entity () : Qnil;
+	return isMatch ? Fcons (ns_fallback_entity (), list) : Qnil;
 
     cFamilies = ns_get_covering_families (ns_get_req_script (font_spec), 0.90);
 
@@ -501,6 +501,10 @@ ns_findfonts (Lisp_Object font_spec, BOOL isMatch)
 					 AREF (font_spec, FONT_EXTRA_INDEX),
 					 "synthItal"), list);
       }
+
+    /* Return something if was a match and nothing found. */
+    if (isMatch && XINT (Flength (list)) == 0)
+      list = Fcons (ns_fallback_entity (), Qnil);
 
     if (NSFONT_TRACE)
 	fprintf (stderr, "    Returning %d entities.\n", XINT (Flength (list)));
